infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: explorer
  namespace: k8s-explorer
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-explorer.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: explorer-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: explorer-gateway
                port:
                  number: 80
